--- a/index.html
+++ b/index.html
@@ -19,15 +19,20 @@
     <!-- End Google Tag Manager -->
 
   </head>
-
-  <body>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-820DE4GS4B"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
     
+      gtag('config', 'G-820DE4GS4B');
+    </script>
+  <body>
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PMPMXXML"
       height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
-
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
